--- a/1.html
+++ b/1.html
@@ -1,18 +1,23 @@
-<!dogtype html>
+<!doctype html>
 <html>
 <head>
   <title>F1 - html</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">F1</a></h1>
-  <ol>
-    <li><a href="1.html">F1</a></li>
-    <li><a href="2.html">F1이란</a></li>
-    <li><a href="3.html">일정</a></li>
-  </ol>
-  <h2>F1</h2>
-  <img src="F1 cars.jpg" width="400">
-  <br>F1은 <strong>세계 최고의 <u><a href="https://en.wikipedia.org/wiki/Motorsport">모터스포츠</a></u></strong>이다.
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" class="saw" id=active>F1</a></li>
+      <li><a href="2.html" class="saw">F1이란</a></li>
+      <li><a href="3.html" class="saw">일정</a></li>
+    </ol>
+    <div id="article">
+      <h2>F1</h2>
+      <img src="F1 cars.jpg" width="400">
+      <br>F1은 <strong>세계 최고의 <u><a href="https://en.wikipedia.org/wiki/Motorsport">모터스포츠</a></u></strong>이다.
+    </div>
+  </div>
 </body>
 </html>
