--- a/2.html
+++ b/2.html
@@ -1,18 +1,29 @@
-<!dogtype html>
+<!doctype html>
 <html>
 <head>
   <title>F1이란 - html</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">F1</a></h1>
-  <ol>
-    <li><a href="1.html">F1</a></li>
-    <li><a href="2.html">F1이란</a></li>
-    <li><a href="3.html">일정</a></li>
-  </ol>
-  <h2>F1이란</h2>
-  <p style="margin-top:30px"><a href="https://www.fia.com/" target="_blank" title="FIA homepage">국제자동차연맹 FIA</a>에서 주관하고 FOM이 상업적 주관을 하는 국제 자동차 프로 레이싱 대회.
-  <br>정식 명칭은 <strong>FIA Formula One World Championship</strong>이다.<br>F1카를 사용하여 최고의 스피드를 자랑한다.</p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" class="saw">F1</a></li>
+      <li><a href="2.html"
+        class="saw" id=active>F1이란</a></li>
+      <li><a href="3.html" class="saw">일정</a></li>
+    </ol>
+    <div id="article">
+      <h2>F1이란</h2>
+      <p style="margin-top:30px">
+      <a href="https://www.fia.com/" target="_blank" title="FIA homepage"
+      style="text-decoration:underline">
+      국제자동차연맹 FIA</a>에서 주관하고 FOM이 상업적 주관을 하는 국제 자동차 프로 레이싱 대회.
+      <br>정식 명칭은 <strong>FIA Formula One World Championship</strong>이다.
+      <br>F1카를 사용하여 최고의 스피드를 자랑한다.
+      <br>코너에서의 탈출속도와 최고속도, 평균속도는 공식 대회중에서는 세계 최고이다.</p>
+    </div>
+  </div>
 </body>
 </html>
