--- a/3.html
+++ b/3.html
@@ -1,17 +1,22 @@
-<!dogtype html>
+<!doctype html>
 <html>
 <head>
   <title>일정 - html</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1><a href="index.html">F1</a></h1>
-  <ol>
-    <li><a href="1.html">F1</a></li>
-    <li><a href="2.html">F1이란</a></li>
-    <li><a href="3.html">일정</a></li>
-  </ol>
-  <h2>일정</h2>
-  <p><li>목요일 - 기자회견</li><li>금요일 - 연습주행</li><li>토요일 - 예선전</li><li>일요일 - 레이스</li></p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" class="saw">F1</a></li>
+      <li><a href="2.html" class="saw">F1이란</a></li>
+      <li><a href="3.html" class="saw" id="active">일정</a></li>
+    </ol>
+    <div id="article">
+      <h2>일정</h2>
+      <p><li>목요일 - 기자회견</li><li>금요일 - 연습주행</li><li>토요일 - 예선전</li><li>일요일 - 레이스</li></p>
+    </div>
+  </div>
 </body>
 </html>
