--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<!dogtype html>
+<!doctype html>
 <html>
 <head>
   <title>F1 - html</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1><a href="index.html">F1</a></h1>
-  <ol>
-    <li><a href="1.html">F1</a></li>
-    <li><a href="2.html">F1이란</a></li>
-    <li><a href="3.html">일정</a></li>
-  </ol>
+  <h1><a href="index.html" class="saw" id="active">F1</a></h1>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" class="saw">F1</a></li>
+      <li><a href="2.html" class="saw">F1이란</a></li>
+      <li><a href="3.html" class="saw">일정</a></li>
+    </ol>
+  </div>
 </body>
 </html>
